test/tests/stages/18_structures/invalid_parse/dot_no_left_expr.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[11]:
  int
  identifier(main)
  (
  void
  )
  {
  return
  .
  identifier(a)
  ;
  }
